# CujusQue-Library

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  corelib.cpp
include/: Any.hpp  CQue.hpp  Containers.hpp  List.hpp  TypeTag.hpp  base_include.hpp
source/: Any.cpp  TypeTag.cpp
source/Any/: CMakeLists.txt
source/TypeTag/: CMakeLists.txt
tester/: CMakeLists.txt  main.cpp
